add Material Css with flatuicolors

--- a/fever-chat.css
+++ b/fever-chat.css
@@ -1,1 +1,7 @@
 /* CSS declarations go here */
+body {
+	font-family: Raleway, sans-serif;
+	font-size: 1.3em;
+	background-color: #27ae60;
+	color: #ecf0f1;
+}
